made changes on the ebook

--- a/Courses/DetailCourse.html
+++ b/Courses/DetailCourse.html
@@ -167,9 +167,9 @@
                 <button class="btnadd mb-3" id="addClassButton">
                   <a href="/Courses/AddPdf.html">Add Pdf</a>
                 </button>
-                <button class="btnadd mb-3" id="addClassButton">
+                <!-- <button class="btnadd mb-3" id="addClassButton">
                   <a href="/Courses/AddPet.html">Add PET</a>
-                </button>
+                </button> -->
               </div>
 
               <div class="popup-overlay" id="editPopup">
