--- a/EBook/ebook.html
+++ b/EBook/ebook.html
@@ -12,15 +12,17 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
     /> -->
-    <link rel="stylesheet" href="../Category/table.css" />
-    <link rel="stylesheet" href="../Category/popUpStyle.css" />
-    <link rel="stylesheet" href="../Category/addCategory.css" />
+    <link rel="stylesheet" href="/Courses/table.css" />
+    <link rel="stylesheet" href="/Courses/popUpStyle.css" />
+    <link rel="stylesheet" href="/Courses/addCategory.css" />
+    <script src="/blockMobile.js"></script>
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
     />
     <link
       rel="stylesheet"
@@ -52,15 +54,10 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../Style.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/css/bootstrap.min.css"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
     <style>
       .col-10 {
         /* padding: 0; */
@@ -81,8 +78,6 @@
     <div class="dashboard">
       <div class="">
         <div class="row">
-          <!-- sidebar -->
-          <!-- In your main HTML page -->
           <div class="col-2 sidebar">
             <iframe
               src="/Layout/DashboardSidebar.html"
@@ -90,8 +85,6 @@
               scrolling="no"
               height="100%"
             ></iframe>
-            <!-- In your main HTML page -->
-            <!-- #include virtual="sidebar.html" -->
           </div>
 
           <!-- dashboard -->
@@ -100,31 +93,28 @@
               <!-- banner -->
               <div class="row navbar">
                 <div class="col-1">
-                  <i class="fa-solid fa-bars"></i>
                   <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
-                <div class="col-2">
-                  <button class="btnd">WEBSITE</button>
-                </div>
-                <div class="col-2">
-                  <button class="btnd">DASHBOARD</button>
-                </div>
-                <div class="col-1">
-                  <button class="btnd">REPORTS</button>
-                </div>
-                <div class="col-2">
-                  <p>2023-2024</p>
-                </div>
 
-                <div class="col-1">
-                  <i class="fa-regular fa-comment"></i>
-                  <i class="fa-solid fa-bell"></i>
+                <div class="col-2 dropdown">
+                  <i
+                    class="fa-regular fa-user dropdown-toggle"
+                    id="userDropdown"
+                    data-toggle="dropdown"
+                    aria-haspopup="true"
+                    aria-expanded="false"
+                  ></i>
+                  <div class="dropdown-menu" aria-labelledby="userDropdown">
+                    <a class="dropdown-item" href="#">Profile</a>
+                    <a class="dropdown-item" href="#">Settings</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Logout</a>
+                  </div>
                 </div>
               </div>
-              <!-- maincontent   -->
-              <div class="mt-3">
-                <h2>All E-Book</h2>
 
+              <div class="container mt-3">
+                <h2>All E-Book</h2>
                 <div
                   style="
                     display: flex;
@@ -132,8 +122,8 @@
                     justify-content: space-between;
                   "
                 >
-                  <button class="btnadd mb-3">
-                    <a href="/EBook/addebook.html">Add E-Book</a>
+                  <button class="btnadd mb-3" id="addClassButton">
+                    <a href="/Courses/AddCourses.html">Add E-Book</a>
                   </button>
                   <form>
                     <div class="form-group">
@@ -155,21 +145,25 @@
                 <i class="fa-solid fa-bars"></i>
               </div>
               <div class="categoryTable row mt-3">
-                <table class="table" id="banner-table">
+                <table
+                  class="table table-hover table-bordered"
+                  id="category-table"
+                >
+                  <!-- <table class="styled-table"> -->
                   <thead>
                     <tr>
                       <th>#</th>
                       <th>Name</th>
-                      <th>Description</th>
                       <th>Image</th>
-                      <th>Type</th>
-                      <th>Quantity</th>
                       <th>Price</th>
-                      <th>Discount Price</th>
-                      <th>Actions</th>
+                      <th>Discount</th>
+                      <th>Type</th>
+                      <th>Description</th>
+                      <th>Add Resourses</th>
+                      <th>Action</th>
                     </tr>
                   </thead>
-                  <tbody id="banner-table-body"></tbody>
+                  <tbody id="category-table-body"></tbody>
                 </table>
                 <div id="pagination">
                   <button id="prev-button" onclick="prevPage()">
@@ -184,34 +178,32 @@
 
               <div class="popup-overlay" id="editPopup">
                 <div class="popup-container addCategory">
-                  <h2>Edit Items</h2>
+                  <h2>Edit Item</h2>
                   <div style="max-height: 80vh; overflow-y: auto">
-                    <!-- onsubmit="submitForm(event)" -->
-                    <form
-                      action="#"
-                      method="post"
-                      enctype="multipart/form-data"
-                    >
+                    <form action="#" method="post">
                       <label for="name">Name:</label>
                       <input type="text" id="name" name="name" required />
 
+                      <br />
                       <label for="description">Description:</label>
                       <textarea
-                        type="text"
                         id="description"
                         name="description"
-                        cols="4"
+                        rows="4"
+                        required
                       ></textarea>
 
-                      <label for="image">Image:</label>
+                      <!-- <label for="image">Image:</label>
                       <input
                         type="file"
                         id="image"
                         name="image"
                         accept="image/*"
+                        required
                         onchange="previewImage()"
                       />
-                      <div class="imgPreviewsx">
+                      <br />
+                      <div class="imgPreview">
                         <img
                           id="imagePreview"
                           src="#"
@@ -222,7 +214,7 @@
                             max-height: 200px;
                           "
                         />
-                      </div>
+                      </div> -->
 
                       <label for="category">Category:</label>
                       <select name="category" id="category">
@@ -235,13 +227,14 @@
                       <label for="discount">Discount Price:</label>
                       <input type="number" id="discount" name="discount" />
 
-                      <label for="quantity">Quantity:</label>
-                      <input
-                        type="number"
-                        id="quantity"
-                        name="quantity"
-                        required
-                      />
+                      <label for="edittype">Type:</label>
+                      <select id="edittype" name="edittype" required>
+                        <option value="pet">PETest</option>
+                        <option value="video">Video</option>
+                        <option value="test">Test</option>
+                        <option value="pdf">PDF</option>
+                      </select>
+                      <br />
 
                       <label for="lang">Language:</label>
                       <select id="lang" name="lang" required>
@@ -249,44 +242,46 @@
                         <option value="en">ENGLISH</option>
                       </select>
 
-                      <!-- <label for="pdf">Content ( PDF File ):</label>
-                      <input
-                        type="file"
-                        id="pdf"
-                        name="pdf"
-                        accept=".pdf"
-                        required
-                      /> -->
-                      <!-- onchange="previewPDF()" -->
+                      <label for="isfree">Is Free:</label>
+                      <select id="isfree" name="isfree" required>
+                        <option value="false">Not free</option>
+                        <option value="true">Free</option>
+                      </select>
+
                       <div
                         style="display: flex; gap: 5px; justify-content: right"
                       >
-                        <button type="button" style="background-color: red" id="closemodal">
+                        <button
+                          type="button"
+                          style="background-color: red"
+                          id="closemodal"
+                        >
                           Close
                         </button>
                         <button type="submit">Submit</button>
                       </div>
                     </form>
                   </div>
+                  <!-- Add your edit form or content here -->
                 </div>
               </div>
 
               <div
                 class="modal fade"
-                id="deleteBannerModal"
+                id="deleteCategoryModal"
                 tabindex="-1"
-                aria-labelledby="deleteBannerModalLabel"
+                aria-labelledby="deleteCategoryModalLabel"
                 aria-hidden="true"
               >
                 <div class="modal-dialog">
                   <div class="modal-content">
                     <div class="modal-header">
-                      <h5 class="modal-title" id="deleteBannerModalLabel">
+                      <h5 class="modal-title" id="deleteCategoryModalLabel">
                         Confirm Deletion
                       </h5>
                     </div>
                     <div class="modal-body">
-                      Are you sure you want to delete this ebook?
+                      Are you sure you want to delete this category?
                     </div>
                     <div class="modal-footer">
                       <button
@@ -299,7 +294,7 @@
                       <button
                         type="button"
                         class="btn btn-danger"
-                        id="confirmDeleteBanner"
+                        id="confirmDeleteCategory"
                       >
                         Delete
                       </button>
@@ -312,8 +307,8 @@
         </div>
       </div>
     </div>
+
     <!-- <script src="../Script.js"></script> -->
-    <script src="/blockMobile.js"></script>
     <script src="ebook.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.5.0/dist/js/bootstrap.min.js"></script>
     <script>
@@ -338,7 +333,51 @@
         }
       });
     </script>
-    <!-- <script>
+    <script>
+      function fetchCategoryData() {
+        // Replace 'YOUR_API_URL' with the actual API endpoint
+        console.log("fethichg", token);
+        fetch(
+          "https://api.bhattacharjeesolution.in/book/api/admin-show-category.php",
+          {
+            headers: {
+              token: token,
+            },
+          }
+        )
+          .then((response) => response.json())
+          .then((data) => {
+            console.log("data", data);
+            const categorySelect = document.getElementById("category");
+
+            // Clear existing options
+            categorySelect.innerHTML = "";
+
+            // Add a default option
+            const defaultOption = document.createElement("option");
+            defaultOption.value = "0";
+            defaultOption.textContent = "Select a category";
+            categorySelect.appendChild(defaultOption);
+
+            // Populate the select with data from the API
+            data.forEach((category) => {
+              const option = document.createElement("option");
+              option.value = category.id;
+              option.textContent = category.name;
+              categorySelect.appendChild(option);
+            });
+
+            // Add an event listener to fetch subcategories when a category is selected
+            // categorySelect.addEventListener("change", fetchSubcategories);
+          })
+          .catch((error) => {
+            console.error("Error fetching data:", error);
+          });
+      }
+
+      window.addEventListener("load", fetchCategoryData);
+    </script>
+    <script>
       // JavaScript to handle the popup
       const editButtons = document.querySelectorAll(".edit-button");
       const editPopup = document.getElementById("editPopup");
@@ -355,50 +394,50 @@
       closePopupButton.addEventListener("click", () => {
         editPopup.style.display = "none";
       });
-    </script> -->
+    </script>
     <script>
-      function previewImage() {
-        const input = document.getElementById("image");
-        const preview = document.getElementById("imagePreview");
-
+      document
+        .getElementById("addClassButton")
+        .addEventListener("click", function () {
+          var modal = document.getElementById("addClassModal");
+          modal.style.display = "block";
+          document
+            .getElementById("closeModalButton")
+            .addEventListener("click", function () {
+              modal.style.display = "none";
+            });
+          window.addEventListener("click", function (event) {
+            if (event.target == modal) {
+              modal.style.display = "none";
+            }
+          });
+        });
+    </script>
+    <script>
+      function previewImage(input) {
+        const previewElement = input.parentNode.querySelector(".image-preview");
         if (input.files && input.files[0]) {
           const reader = new FileReader();
-
           reader.onload = function (e) {
-            preview.style.display = "block";
-            preview.src = e.target.result;
+            previewElement.src = e.target.result;
+            // Store the image data in local storage
+            localStorage.setItem("imagePreview", e.target.result);
           };
-
           reader.readAsDataURL(input.files[0]);
         } else {
-          preview.style.display = "none";
-          preview.src = "";
+          previewElement.src = "#";
+          // Remove the image data from local storage
+          localStorage.removeItem("imagePreview");
         }
       }
-      // function previewImage(input) {
-      //   const previewElement = input.parentNode.querySelector(".imgPreview");
-      //   if (input.files && input.files[0]) {
-      //     const reader = new FileReader();
-      //     reader.onload = function (e) {
-      //       previewElement.src = e.target.result;
-      //       // Store the image data in local storage
-      //       localStorage.setItem("imagePreview", e.target.result);
-      //     };
-      //     reader.readAsDataURL(input.files[0]);
-      //   } else {
-      //     previewElement.src = "#";
-      //     // Remove the image data from local storage
-      //     localStorage.removeItem("imagePreview");
-      //   }
-      // }
       // Check if there's a stored image preview on page load
-      // const storedImagePreview = localStorage.getItem("imagePreview");
-      // if (storedImagePreview) {
-      //   const previewElements = document.querySelectorAll(".image-preview");
-      //   previewElements.forEach((element) => {
-      //     element.src = storedImagePreview;
-      //   });
-      // }
+      const storedImagePreview = localStorage.getItem("imagePreview");
+      if (storedImagePreview) {
+        const previewElements = document.querySelectorAll(".image-preview");
+        previewElements.forEach((element) => {
+          element.src = storedImagePreview;
+        });
+      }
     </script>
     <!-- <script>
       fetch("../Layout/DashboardSidebar.html")
@@ -407,5 +446,6 @@
           document.getElementById("sidebar").innerHTML = content;
         });
     </script> -->
+    <script src="blockMobile.js"></script>
   </body>
 </html>
