--- a/Courses/AddVideo.html
+++ b/Courses/AddVideo.html
@@ -95,7 +95,9 @@
                     required
                   ></textarea>
 
-                  <label for="dayno">Day Number:</label>
+                  <label for="dayno"
+                    >Day Number: (The Resource will is free for day 0! )</label
+                  >
                   <input type="number" id="dayno" name="dayno" />
 
                   <label for="link">Link:</label>
