--- a/Courses/AddPet.html
+++ b/Courses/AddPet.html
@@ -93,7 +93,9 @@
                     required
                   ></textarea>
 
-                  <label for="dayno">Day Number:</label>
+                  <label for="dayno"
+                    >Day Number: (The Resource will is free for day 0! )</label
+                  >
                   <input type="number" id="dayno" name="dayno" />
 
                   <label for="pdf">Content ( PDF File ):</label>
