--- a/Courses/AddTest.html
+++ b/Courses/AddTest.html
@@ -98,7 +98,10 @@
                   <label for="dayno">Day Number:</label>
                   <input type="number" id="dayno" name="dayno" />
 
-                  <label for="pdf">Content ( PDF File ):</label>
+                  <label for="pdf"
+                    >Content ( PDF File ): (The Resource will is free for day 0!
+                    )</label
+                  >
                   <input
                     type="file"
                     id="pdf"
